# perevoditarr

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  prek.toml
backend/: .env.example  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 1b98c6e82cd9_phase_5_auth_role_column.py  41ec01fb47c2_phase_5_webhooks_webhook_source.py  70f0a211bdba_phase_3_rail_state.py  a8a87bee47ea_phase_5_watch_watch_source_watch_score.py  b3f1a27d9e40_phase_2_policy_schema_presets_profiles_.py  c4ede387c88f_phase_1_schema_auth_instances_mirror_.py  c4f733b8b976_initial_schema.py  d81f5c3a7b26_phase_2_intent_ledger_intents_and_events.py  dca53ce97a42_phase_4_passthrough_passthrough_action_.py  ddb8e6d13c3c_phase_6_setup_app_setup_state.py  ea1e8e59341a_phase_3_notification_route.py  edd8b087cccf_phase_4_stats_stats_daily_stats_.py
backend/src/perevoditarr/: __init__.py  app.py  cli.py  models.py
backend/tests/: conftest.py  support.py
backend/tests/integration/: test_auth.py  test_bazarr_contract.py  test_cli_admin.py  test_corruption_and_crash.py  test_discovery.py  test_dispatch_scale.py  test_dispatcher.py  test_doctor.py  test_evidence_collectors.py  test_instances.py  test_intents.py  test_intents_migration.py  test_ldap.py  test_lingarr_contract.py  test_metrics.py  test_mirror.py  test_notifications.py  test_oidc.py  test_plan_preview.py  test_policy.py  test_policy_migration.py  test_quarantine.py  test_rails.py  test_reconciler.py  test_roles.py  test_setup_wizard.py  test_setup_wizard_redteam.py  test_stats.py  test_telemetry_polling.py  test_timeline_passthrough.py  test_verification.py  test_watch_clients.py  test_webhooks.py
backend/tools/: check_basedpyright_config.py
(+369 files in other folders)
